// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-3eb6c794b84a56df8193.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97 _1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY ZGMTdqO\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-107ac53d6e89f601231d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-7f5ae54b5a2001a720fa.js\\" crossorigin=\\"anonymous\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-3eb6c794b84a56df8193.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97 _1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY ZGMTdqO\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-107ac53d6e89f601231d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-7f5ae54b5a2001a720fa.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-3eb6c794b84a56df8193.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97 _1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY ZGMTdqO\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-107ac53d6e89f601231d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-7f5ae54b5a2001a720fa.js\\" crossorigin=\\"anonymous\\"></script>
  </body>
</html>",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "main-3eb6c794b84a56df8193.css": "._1brbpTo{display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
body{background:#00f}._1nHWyNV{color:green}._1nHWyNV .ZGMTdqO{color:pink}
",
  "main-7f5ae54b5a2001a720fa.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-1dabfc1890e798beba49.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-107ac53d6e89f601231d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-3eb6c794b84a56df8193.css\\">
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97 _1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY ZGMTdqO\\">Hello World</div></div></div>
          <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-107ac53d6e89f601231d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-7f5ae54b5a2001a720fa.js\\" crossorigin=\\"anonymous\\"></script>
        
      
    </body></html>",
  "errors": Array [],
  "sourceHtml": "
      <!DOCTYPE html>
      <html>
        <head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"http://localhost:4003/main-3eb6c794b84a56df8193.css\\" />
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97 _1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"_3YtmnHj lwsthgY ZGMTdqO\\">Hello World</div></div></div>
          <script type=\\"text/javascript\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/vendors~main-107ac53d6e89f601231d.js\\" crossorigin=\\"anonymous\\"></script>
<script type=\\"text/javascript\\" src=\\"http://localhost:4003/main-7f5ae54b5a2001a720fa.js\\" crossorigin=\\"anonymous\\"></script>
        </body>
      </html>
    ",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "assets.json": "{\\"main\\":{\\"js\\":[\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\",\\"http://localhost:4003/vendors~main-107ac53d6e89f601231d.js\\",\\"http://localhost:4003/main-7f5ae54b5a2001a720fa.js\\"],\\"css\\":\\"http://localhost:4003/main-3eb6c794b84a56df8193.css\\"}}",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "main-3eb6c794b84a56df8193.css": "._1brbpTo{display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
body{background:#00f}._1nHWyNV{color:green}._1nHWyNV .ZGMTdqO{color:pink}
",
  "main-7f5ae54b5a2001a720fa.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-1dabfc1890e798beba49.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-107ac53d6e89f601231d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/main.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97 tsStyles-css__root___1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY tsStyles-css__nested___ZGMTdqO\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link rel=\\"stylesheet\\" type=\\"text/css\\" href=\\"/main.css\\" />
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97 tsStyles-css__root___1nHWyNV\\" data-reactroot=\\"\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY tsStyles-css__nested___ZGMTdqO\\">Hello World</div></div></div>
    <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~main.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/main.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
